--- a/index.html
+++ b/index.html
@@ -3,7 +3,21 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <title>passenger_flow_analysis</title>
+    <title>连锁门店客流分析系统</title>
+    <!DOCTYPE html>  
+<html>
+<head>
+  
+  <script type="text/javascript" src="http://api.map.baidu.com/api?v=3.0&ak=RbAnSQYqc6NuvRM2fZFfGSvgl8jBqyaB"></script>
+  <script type="text/javascript" src="http://api.map.baidu.com/library/Heatmap/2.0/src/Heatmap_min.js"></script>    
+  <script type="text/javascript" src="http://api.map.baidu.com/library/TextIconOverlay/1.2/src/TextIconOverlay_min.js"></script>
+  <script type="text/javascript" src="./static/MarkerClusterer.js"></script>
+  <!--
+  <script type="text/javascript" src="http://api.map.baidu.com/library/MarkerClusterer/1.2/src/MarkerClusterer_min.js"></script>-->
+    <script src="https://a.amap.com/Loca/static/dist/jquery.min.js"></script>
+    <script src="https://webapi.amap.com/maps?v=1.4.15&key=deb3984a051e88ac44477bdbb145a9ca"></script>
+    <script src="https://webapi.amap.com/loca?v=1.3.0&key=deb3984a051e88ac44477bdbb145a9ca"></script>
+    <link rel="stylesheet" href="https://a.amap.com/jsapi_demos/static/demo-center/css/demo-center.css"/>
   </head>
   <body>
     <div id="app"></div>
